--- a/VGA.qsf
+++ b/VGA.qsf
@@ -628,4 +628,5 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VHDL_FILE DisplayLogicBig.vhd
 set_global_assignment -name VHDL_FILE DisplayLogicSmall.vhd
 set_global_assignment -name QIP_FILE romPicture128x128.qip
+set_global_assignment -name VHDL_FILE outputSwitch.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
