--- a/VGA.qsf
+++ b/VGA.qsf
@@ -629,4 +629,5 @@ set_global_assignment -name VHDL_FILE DisplayLogicBig.vhd
 set_global_assignment -name VHDL_FILE DisplayLogicSmall.vhd
 set_global_assignment -name QIP_FILE romPicture128x128.qip
 set_global_assignment -name VHDL_FILE outputSwitch.vhd
+set_global_assignment -name VHDL_FILE FSM.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
