--- a/VGA.qsf
+++ b/VGA.qsf
@@ -631,4 +631,5 @@ set_global_assignment -name QIP_FILE romPicture128x128.qip
 set_global_assignment -name VHDL_FILE outputSwitch.vhd
 set_global_assignment -name VHDL_FILE FSM.vhd
 set_global_assignment -name VHDL_FILE DisplayLogicBigInvert.vhd
+set_global_assignment -name VHDL_FILE VideoSwtich.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
