--- a/VGA.qsf
+++ b/VGA.qsf
@@ -606,6 +606,13 @@ set_location_assignment PIN_U25 -to TOUCH_DIN
 set_location_assignment PIN_T26 -to TOUCH_CS_N
 set_location_assignment PIN_T25 -to TOUCH_DCLK
 set_location_assignment PIN_L22 -to TOUCH_PENIRQN
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE LSP_Nios.vhd
+set_global_assignment -name QSYS_FILE nios_system.qsys
+set_global_assignment -name SOURCE_FILE nios_system.cmp
+set_global_assignment -name VHDL_FILE sdram_pll.vhd
 set_global_assignment -name TEXT_FILE @README.txt
 set_global_assignment -name TEXT_FILE @ListOfFiles.txt
 set_global_assignment -name BDF_FILE Demo_LCD.bdf
@@ -622,9 +629,6 @@ set_global_assignment -name VHDL_FILE VGARegDE2.vhd
 set_global_assignment -name VECTOR_WAVEFORM_FILE VGAgenerator_Waveform.vwf
 set_global_assignment -name SDC_FILE VGAtiming.sdc
 set_global_assignment -name QIP_FILE romPicture256x256.qip
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VHDL_FILE DisplayLogicBig.vhd
 set_global_assignment -name VHDL_FILE DisplayLogicSmall.vhd
 set_global_assignment -name QIP_FILE romPicture128x128.qip
